...
          const SizedBox(width: 8),
          Row(
            mainAxisSize: MainAxisSize.min,
            children: [
              context.appDecoration.wrapInteractive(
                child: IconButton(
                  key: const ValueKey('new_folder_button'),
                  icon: Icon(
                    Icons.create_new_folder,
                    color: theme.colorScheme.onSurface,
                    size: layout.iconSize,
                  ),
                  tooltip: 'NEW FOLDER',
...
